--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
-  "name": "iterable-wrapper",
-  "version": "1.0.0",
-  "description": "",
+  "name": "seqzy.js",
+  "version": "0.0.0",
+  "description": "Lazy sequence library, tailor made for Javascript Iterables",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ItaHeld90/seqzy.js.git"
+  },
+  "author": "Itamar Held",
+  "license": "MIT",
   "dependencies": {
     "ramda": "0.25.0"
   }
