--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Lazy sequence library, tailor made for Javascript Iterables",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "babel src --out-dir dist --copy-files --ignore *.test.js"
   },
   "repository": {
     "type": "git",
@@ -14,5 +15,9 @@
   "license": "MIT",
   "dependencies": {
     "ramda": "0.25.0"
+  },
+  "devDependencies": {
+    "babel-cli": "6.26.0",
+    "babel-preset-env": "1.7.0"
   }
 }
