--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Lazy sequence library, tailor made for Javascript Iterables",
   "main": "dist/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "prebuild": "rimraf dist",
     "build": "babel src --out-dir dist --copy-files"
   },
@@ -20,6 +20,8 @@
   "devDependencies": {
     "babel-cli": "6.26.0",
     "babel-preset-env": "1.7.0",
+    "chai": "4.1.2",
+    "mocha": "5.2.0",
     "rimraf": "2.6.2"
   }
 }
