--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "babel-cli": "6.26.0",
     "babel-preset-env": "1.7.0",
+    "babel-register": "6.26.0",
     "chai": "4.1.2",
     "mocha": "5.2.0",
     "rimraf": "2.6.2"
