--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Lazy sequence library, tailor made for Javascript Iterables",
   "main": "dist/app.js",
   "scripts": {
-    "test": "mocha",
+    "test": "mocha --compilers js:babel-register",
     "prebuild": "rimraf dist",
     "build": "babel src --out-dir dist --copy-files"
   },
