--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Lazy sequence library, tailor made for Javascript Iterables",
   "main": "dist/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --compilers js:babel-register",
+    "test:watch": "mocha -w --compilers js:babel-register",
     "prebuild": "rimraf dist",
     "build": "babel src --out-dir dist --copy-files"
   },
@@ -20,6 +21,10 @@
   "devDependencies": {
     "babel-cli": "6.26.0",
     "babel-preset-env": "1.7.0",
-    "rimraf": "2.6.2"
+    "babel-register": "6.26.0",
+    "chai": "4.1.2",
+    "mocha": "5.2.0",
+    "rimraf": "2.6.2",
+    "sinon": "6.0.0"
   }
 }
